zetasql/parser/testdata/show.test
show ;
--
ERROR: Syntax error: Unexpected ";" [at 1:6]
show ;
     ^
==

show TABLES adwords;
--
ERROR: Syntax error: Expected end of input but got identifier "adwords" [at 1:13]
show TABLES adwords;
            ^
==

show catalog.tables
--
ERROR: Syntax error: Expected end of input but got "." [at 1:13]
show catalog.tables
            ^
==

show TABLES;
--
ShowStatement [0-11]
  Identifier(TABLES) [5-11]
--
SHOW TABLES
==

show DATABASES;
--
ShowStatement [0-14]
  Identifier(DATABASES) [5-14]
--
SHOW DATABASES
==

show TABLES from;
--
ERROR: Syntax error: Unexpected ";" [at 1:17]
show TABLES from;
                ^
==

show TABLES from adwords;
--
ShowStatement [0-24]
  Identifier(TABLES) [5-11]
  PathExpression [17-24]
    Identifier(adwords) [17-24]
--
SHOW TABLES FROM adwords
==

show JOBS from adwords;
--
ShowStatement [0-22]
  Identifier(JOBS) [5-9]
  PathExpression [15-22]
    Identifier(adwords) [15-22]
--
SHOW JOBS FROM adwords
==

show JOBS from adwords like '11';
--
ShowStatement [0-32]
  Identifier(JOBS) [5-9]
  PathExpression [15-22]
    Identifier(adwords) [15-22]
  StringLiteral('11') [28-32]
--
SHOW JOBS FROM adwords LIKE '11'
==

show TABLES from catalog.adwords;
--
ShowStatement [0-32]
  Identifier(TABLES) [5-11]
  PathExpression [17-32]
    Identifier(catalog) [17-24]
    Identifier(adwords) [25-32]
--
SHOW TABLES FROM catalog.adwords
==

show TABLES from adwords like;
--
ERROR: Syntax error: Expected string literal but got ";" [at 1:30]
show TABLES from adwords like;
                             ^
==

show TABLES like 'KitchenSync%';
--
ShowStatement [0-31]
  Identifier(TABLES) [5-11]
  StringLiteral('KitchenSync%') [17-31]
--
SHOW TABLES LIKE 'KitchenSync%'
==

show COLUMNS from KitchenSync;
--
ShowStatement [0-29]
  Identifier(COLUMNS) [5-12]
  PathExpression [18-29]
    Identifier(KitchenSync) [18-29]
--
SHOW COLUMNS FROM KitchenSync
==

show INDEXES from myschema.MyTable;
--
ShowStatement [0-34]
  Identifier(INDEXES) [5-12]
  PathExpression [18-34]
    Identifier(myschema) [18-26]
    Identifier(MyTable) [27-34]
--
SHOW INDEXES FROM myschema.MyTable
==

show STATUS;
--
ShowStatement [0-11]
  Identifier(STATUS) [5-11]
--
SHOW STATUS
==

show JOB 12;
--
ShowStatement [0-11]
  Identifier(JOB) [5-8]
  TargetName [9-11]
    IntLiteral(12) [9-11]
--
SHOW JOB 12
==

SHOW JOBS;
--
ShowStatement [0-9]
  Identifier(JOBS) [5-9]
--
SHOW JOBS
==

show JOBLOG 19;
--
ShowStatement [0-14]
  Identifier(JOBLOG) [5-11]
  TargetName [12-14]
    IntLiteral(19) [12-14]
--
SHOW JOBLOG 19
==

show VARIABLES;
--
ShowStatement [0-14]
  Identifier(VARIABLES) [5-14]
--
SHOW VARIABLES
==

show VARIABLES like 'server_name';
--
ShowStatement [0-33]
  Identifier(VARIABLES) [5-14]
  StringLiteral('server_name') [20-33]
--
SHOW VARIABLES LIKE 'server_name'
==

show GLOBAL VARIABLES;
--
ShowStatement [0-21]
  Identifier(`GLOBAL VARIABLES`) [5-21]
--
SHOW `GLOBAL VARIABLES`
==

show SESSION VARIABLES;
--
ShowStatement [0-22]
  Identifier(`SESSION VARIABLES`) [5-22]
--
SHOW `SESSION VARIABLES`
==

show TABLES from adwords like b'abc%';
--
ERROR: Syntax error: Expected string literal but got bytes literal b'abc%' [at 1:31]
show TABLES from adwords like b'abc%';
                              ^
==

show TABLES from adwords like 5;
--
ERROR: Syntax error: Expected string literal but got integer literal "5" [at 1:31]
show TABLES from adwords like 5;
                              ^
==

show TABLES from catalog.adwords like 'KitchenSync%';
--
ShowStatement [0-52]
  Identifier(TABLES) [5-11]
  PathExpression [17-32]
    Identifier(catalog) [17-24]
    Identifier(adwords) [25-32]
  StringLiteral('KitchenSync%') [38-52]
--
SHOW TABLES FROM catalog.adwords LIKE 'KitchenSync%'
==

SHOW MATERIALIZED VIEWS;
--
ShowStatement [0-23]
  Identifier(`MATERIALIZED VIEWS`) [5-23]
--
SHOW `MATERIALIZED VIEWS`
==

SHOW PROCEDURE STATUS;
--
ShowStatement [0-21]
  Identifier(`PROCEDURE STATUS`) [5-21]
--
SHOW `PROCEDURE STATUS`
==

SHOW CREATE PROCEDURE name;
--
ShowStatement [0-26]
  Identifier(`CREATE PROCEDURE`) [5-21]
  TargetName [22-26]
    PathExpression [22-26]
      Identifier(name) [22-26]
--
SHOW CREATE PROCEDURE name
==

SHOW CREATE PROCEDURE db.name;
--
ShowStatement [0-29]
  Identifier(`CREATE PROCEDURE`) [5-21]
  TargetName [22-29]
    PathExpression [22-29]
      Identifier(db) [22-24]
      Identifier(name) [25-29]
--
SHOW CREATE PROCEDURE db.name
==

SHOW CREATE TABLE name;
--
ShowStatement [0-22]
  Identifier(`CREATE TABLE`) [5-17]
  TargetName [18-22]
    PathExpression [18-22]
      Identifier(name) [18-22]
--
SHOW CREATE TABLE name
==

SHOW CREATE TABLE db.name;
--
ShowStatement [0-25]
  Identifier(`CREATE TABLE`) [5-17]
  TargetName [18-25]
    PathExpression [18-25]
      Identifier(db) [18-20]
      Identifier(name) [21-25]
--
SHOW CREATE TABLE db.name
==

SHOW DEPLOYMENTS;
--
ShowStatement [0-16]
  Identifier(DEPLOYMENTS) [5-16]
--
SHOW DEPLOYMENTS
==

SHOW DEPLOYMENT deploy_service_1;
--
ShowStatement [0-32]
  Identifier(DEPLOYMENT) [5-15]
  TargetName [16-32]
    PathExpression [16-32]
      Identifier(deploy_service_1) [16-32]
--
SHOW DEPLOYMENT deploy_service_1
==

SHOW COMPONENTS;
--
ShowStatement [0-15]
  Identifier(COMPONENTS) [5-15]
--
SHOW COMPONENTS
==

SHOW GRANTS;
--
ShowStatement [0-11]
  Identifier(GRANTS) [5-11]
--
SHOW GRANTS
==

SHOW TABLE STATUS;
--
ShowStatement [0-17]
  Identifier(`TABLE STATUS`) [5-17]
--
SHOW `TABLE STATUS`
==

SHOW `MATERIALIZED VIEWS`;
--
ShowStatement [0-25]
  Identifier(`MATERIALIZED VIEWS`) [5-25]
--
SHOW `MATERIALIZED VIEWS`
==

SHOW MATERIALIZED VIEWS like 'KitchenSync%';
--
ShowStatement [0-43]
  Identifier(`MATERIALIZED VIEWS`) [5-23]
  StringLiteral('KitchenSync%') [29-43]
--
SHOW `MATERIALIZED VIEWS` LIKE 'KitchenSync%'
==

SHOW MATERIALIZED VIEWS from KitchenSync;
--
ShowStatement [0-40]
  Identifier(`MATERIALIZED VIEWS`) [5-23]
  PathExpression [29-40]
    Identifier(KitchenSync) [29-40]
--
SHOW `MATERIALIZED VIEWS` FROM KitchenSync
==

SHOW MATERIALIZED VIEWS from KitchenSync like '%foo%';
--
ShowStatement [0-53]
  Identifier(`MATERIALIZED VIEWS`) [5-23]
  PathExpression [29-40]
    Identifier(KitchenSync) [29-40]
  StringLiteral('%foo%') [46-53]
--
SHOW `MATERIALIZED VIEWS` FROM KitchenSync LIKE '%foo%'
==

SHOW MATERIALIZED TABLES
--
ERROR: Syntax error: Expected end of input but got identifier "TABLES" [at 1:19]
SHOW MATERIALIZED TABLES
                  ^
==

SHOW MATERIALIZED TABLES from KitchenSync
--
ERROR: Syntax error: Expected end of input but got identifier "TABLES" [at 1:19]
SHOW MATERIALIZED TABLES from KitchenSync
                  ^
